--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/openstack4j-3.0.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
