--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/openstack4j-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/servlet-api.jar"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -23,8 +26,5 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/servlet-api.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/commons-io-2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/openstack4j-3.0.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
