--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/openstack4j-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_121/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_121/lib/openstack4j-3.0.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/ObjectStorage/GitAppTransferFiles/src/Library/servlet-api.jar"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
