--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/AppTransferFiles/WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/AppTransferFiles/WebContent/WEB-INF/lib/openstack4j-3.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/btorrear/Documents/IBM/AppTransferFiles/WebContent/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -27,5 +24,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="src/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/openstack4j-3.0.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
