--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
+
+
     <parent>
         <groupId>net.wasdev.maven.parent</groupId>
         <artifactId>java7-parent</artifactId>
         <version>1.4</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath></relativePath>
     </parent>
-
+    
     <groupId>net.wasdev.wlp.sample</groupId>
     <artifactId>JavaHelloWorldApp</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -75,4 +77,5 @@
         </plugins>
     </build>
 
+    <groupId>net.wasdev.wlp.sample</groupId>
 </project>
