--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 		  <version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-simple</artifactId>
+		    <version>1.6.1</version>
+		</dependency>
+
     </dependencies>
     
     
