--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		  <groupId>org.pacesys</groupId>
 		  <artifactId>openstack4j</artifactId>
 		  <version>3.0.0</version>
+		  <classifier>withdeps</classifier>
 		</dependency>
 
 		<dependency>
